Use only GC options from Java program